@@ -2,6 +2,7 @@
   - Fix typo in common content BZ #952490
   - Stop menu bouncing. BZ #953716
   - Fix ID missing from admonitions. BZ #966494
+  - Support corpauthor for PDF. BZ #908666
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
